// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`linux > fedora - (dnf) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "path": "TestApp.rpm",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`linux > fedora - (dnf) 2`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "path": "TestApp.rpm",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`linux > fedora - (rpm) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "path": "TestApp.rpm",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`linux > fedora - (rpm) 2`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "path": "TestApp.rpm",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`linux > fedora - (yum) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "path": "TestApp.rpm",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`linux > fedora - (yum) 2`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "path": "TestApp.rpm",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`linux > fedora - (zypper) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "path": "TestApp.rpm",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`linux > fedora - (zypper) 2`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp.rpm",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.rpm",
          },
        ],
        "path": "TestApp.rpm",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;
